[package]
name = "miro"
version = "0.1.0"
description = "My Terminal Emulator"
authors = ["o2sh <ossama-hjaji@live.fr>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/o2sh/miro"
build = "src/window/build.rs"

[build-dependencies]
gl_generator = "0.5.0"

[dependencies]
dirs = "1.0"
libloading = "0.5"
crossbeam-channel = "0.3"
downcast-rs = "1.0"
base64 = "0.10"
bitflags = "1.0.1"
failure = "0.1.1"
palette = "0.4.0"
serde = {version="1.0", features = ["rc"]}
serde_derive = "1.0"
harfbuzz-sys = "0.5.0"
libc = "0.2.86"
log = "0.4"
unicode-width = "0.1.4"
euclid = "0.22.1"
serde_json = "1.0"
regex = "1.3.4"
resize = "0.3"
line_drawing = "0.8"
image = "0.21"
unicode-segmentation = "1.2.0"
chrono = "0.4"
lazy_static = "1.4.0"
sysinfo = "0.16.4"
clap = "2.33.3"
clipboard = "0.5"
open = "1.2"
freetype = "0.7.0"
ordered-float = "1.0"
num = "0.2"
num-traits = "0.2"
memmem = "0.1"
smallvec = "0.6"
xi-unicode = "0.2"
vtparse ="0.1.0"
ratelimit_meter = "4.1"
zstd = "0.4"
leb128 = "0.2"
varbincode = "0.1"
filedescriptor = "0.5"

[dependencies.num-derive]
features = ["full-syntax"]
version = "0.2"

[dependencies.glium]
default-features = false
version = "0.29.0"
features = ["glutin"]

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
x11 = { version = "2.18", features = ["xlib_xcb"] }
xcb = "0.8"
xcb-util = { features = ["icccm", "ewmh", "keysyms", "shm"], version = "0.2" }
xkbcommon = { version = "0.4", features = ["x11"] }
mio = "0.6"
mio-extras = "2.0"
servo-fontconfig = "0.5.1"

[target.'cfg(target_os="macos")'.dependencies]
cocoa = "0.19"
objc = "0.2"
core-text = "~13.1"
core-graphics = "0.17"
core-foundation = "0.6"
font-loader = "0.11.0"
cgl = { version = "0.3", optional = true }
