[package]
authors = ["o2sh <ossama-hjaji@live.fr>"]
build = "src/window/build.rs"
description = "My Terminal Emulator"
edition = "2018"
license = "MIT"
name = "miro"
readme = "README.md"
repository = "https://github.com/o2sh/miro"
version = "0.2.0"

[build-dependencies]
gl_generator = "0.14.0"

[dependencies]
base64 = "0.13.0"
bitflags = "1.2.1"
chrono = "0.4.19"
clap = "2.33.3"
clipboard = "0.5.0"
euclid = "0.22.2"
failure = "0.1.8"
filedescriptor = "0.7.3"
freetype = "0.7.0"
glium = {version = "0.29.0", default-features = false}
harfbuzz-sys = "0.5.0"
image = "0.23.14"
lazy_static = "1.4.0"
libc = "0.2.91"
line_drawing = "0.8.0"
log = "0.4.14"
num = "0.4.0"
num-derive = {version = "0.3.3", features = ["full-syntax"]}
num-traits = "0.2.14"
open = "1.6.0"
palette = "0.5.0"
ratelimit_meter = "5.0.0"
regex = "1.4.4"
resize = "0.7.2"
rgb = "0.8.25"
serde = {version = "1.0.125", features = ["rc"]}
serde_derive = "1.0.125"
serde_json = "1.0.64"
smallvec = "1.6.1"
sysinfo = "0.16.4"
unicode-segmentation = "1.7.1"
unicode-width = "0.1.8"
vtparse = "0.1.0"
xi-unicode = "0.3.0"
zstd = "0.6.1"

[target.'cfg(not(target_os = "macos"))'.dependencies]
libloading = "0.7.0"
mio = "0.6.23"
servo-fontconfig = "0.5.1"
x11 = {version = "2.18.2", features = ["xlib_xcb"]}
xcb = "0.9.0"
xcb-util = {version = "0.3.0", features = ["icccm", "keysyms"]}
xkbcommon = {version = "0.4.1", features = ["x11"], git = "https://github.com/o2sh/xkbcommon-rs.git"}

[target.'cfg(target_os="macos")'.dependencies]
cocoa = "0.24.0"
core-foundation = "0.9.1"
core-graphics = "0.22.2"
font-loader = "0.11.0"
objc = "0.2.7"
